--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Uplift",
     "slug": "Uplift",
     "version": "1.0.0",
+    "scheme": "com.navjot.uplift",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -22,6 +23,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
