--- a/app.json
+++ b/app.json
@@ -3,7 +3,6 @@
     "name": "Uplift",
     "slug": "Uplift",
     "version": "1.0.0",
-    "scheme": "com.navjot.uplift",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -24,6 +23,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"]
+    "plugins": []
   }
 }
